fix: gc log parser, doctor snapshot, and provider correctness
GC log pipeline:
- GcEvent: make fullGc/concurrent mutually exclusive so "Concurrent Full
  Mark" is no longer counted as a Full GC
- GcLogPatterns: promote to public single source of truth, add GC_PHASE,
  make legacy cause group optional (JDK 7/early-8 logs no longer dropped)
- GcLogParser: drop duplicated regex sources; ISO timestamps now use
  OffsetDateTime + epoch baseline so cross-midnight logs do not wrap;
  cause extraction reads the last parenthesised group before the byte
  delta (was greedy, capturing "(Normal)" instead of trigger); ZGC and
  Shenandoah patterns now require collector tag in the line
- GcLogAnalyzer: pause totals/averages stay in double so sub-millisecond
  ZGC/Shenandoah pauses no longer truncate to 0; duration is derived
  from min/max so out-of-order events do not collapse to 0.001s
- GcScoreCalculator: N/A axes inherit the available average instead of
  silently re-normalising weights to 1.0

Doctor + provider parsers:
- JvmSnapshotCollector: heap totals from GC.heap_info top-line (G1/ZGC
  per-region max was meaningless); deadlock counter only increments on
  banner header so chain lines no longer inflate it; canonicalise GC
  algorithm name from raw collector / -XX:+UseXxxGC flags so rules
  receive consistent values across local and remote paths
- JdkGcCauseProvider: bound process.waitFor with a 10s timeout and read
  stdout on a daemon thread so a hung target does not block the CLI
- JdkNmtProvider: TB/GB conversion forced to long arithmetic, fixing
  int overflow that produced negative byte counts

DoctorCommand: header now displays the target PID, not the CLI process

GcLogParserTest: update two cases that asserted the old broken
behaviour (ISO seconds-of-day, ungated Shenandoah pattern) to match
the corrected semantics.

Signed-off-by: rlaope <piyrw9754@gmail.com>